# Global-Biodiversity-Score

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  main_app.py  pyproject.toml  requirements.txt
.assets/graphs/: bd.html  boxplot_gdp_per_capita.html  boxplot_km2.html  boxplot_msa.km2.html  boxplot_per_cluster_gdp_per_capita.html  boxplot_per_cluster_km2.html  boxplot_per_cluster_msa.km2.html  boxplot_per_cluster_population.html  boxplot_per_cluster_sum_msa_static.html  boxplot_population.html  boxplot_sum_msa_static.html  choropleth_per_cluster.html  choropleth_per_msa.html  interia.html  silhouette.html
.github/workflows/: ci.yaml
.utils/: _ci.yaml  build.sh  main.py  pre-commit.sh  pre-push.sh  pytest.sh  requirements.dev.txt  requirements.txt  statics.yaml
.utils/docs/: mkdocs.yml
data/: final.csv
data/source/: country_specs_url.csv  crops.csv
data/source/gpd/: API_NY.GDP.PCAP.CD_DS2_en_csv_v2_6298251.csv
data/source/population/: API_SP.POP.TOTL_DS2_en_csv_v2_6298256.csv
docs/docs/: about.md
gbs/: gbs.py  helpers.py
gbs/core/: gbs.py
gbs/etl/: extract.py  laod.py  load.py  loader.py  transform.py  urls.py
gbs/front/: main_app.py  text.py
gbs/notebooks/: 00-Get-Data.ipynb  00-Get-Data.py  01-First-Explo.ipynb  01-First-Explo.py  02-Data-Analysis.py
notebooks/: 00-Get-Data.html  00-Get-Data.ipynb  01-First-Explo.html  01-First-Explo.ipynb  02-Data-Analysis.html  02-Data-Analysis.ipynb
ressources/: gpt4.md  webinars.md
tests/unit/: test_main.py
tests/unit/core/: test_gbs.py
tests/unit/etl/: test_extract.py  test_loader.py
utils/: build.sh  pre-commit.sh  pytest.sh  tox.ini
