[tool.poetry]
name = "global-biodiversity-score"
version = "0.1.0"
description = "CDC Biodiversité is a subsidiary of the Caisse des Dépôts et Consignation, the largest French financial institution. It is specialized in providing biodiversity-positive solutions to businesses such as ecological offsets and biodiversity footprinting."
authors = ["AlexandreGazagnes"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "^2.1.4"
fastapi = "^0.109.0"
streamlit = "^1.30.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
black = {extras = ["jupyter"], version = "^23.12.1"}
openpyxl = "^3.1.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.10"
pytest = "^7.4.4"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
coverage = "^7.4.0"
ipykernel = "^6.28.0"
jupytext = "^1.16.1"
ipywidgets = "^8.1.1"
jupyter-contrib-nbextensions = "^0.7.0"
bandit = "^1.7.6"
pyflakes = "^3.2.0"
pydocstyle = "^6.3.0"
mccabe = "^0.7.0"
safety = "^2.3.5"
pre-commit = "^3.6.0"
pycln = "^2.4.0"
mkdocs = "^1.5.3"
coverage-badge = "^1.1.0"
seaborn = "^0.13.1"
plotly = "^5.18.0"
folium = "^0.15.1"
geopandas = "^0.14.2"
missingno = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
disable_warnings = ["no-data-collected"]